[package]
name = "synth-loop-free-prog"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.4.0"
rand = { version = "0.7.2", features = ["small_rng"] }
log = { version = "0.4.8", optional = true }

[dev-dependencies]
env_logger = "0.7.1"
structopt = "0.3.7"

[profile.release]
debug = true
